--- a/JFUtils.csproj
+++ b/JFUtils.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
+    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -59,10 +59,10 @@
         <Reference Include="ServerSync">
             <HintPath>..\Utils\ServerSync.dll</HintPath>
         </Reference>
-        <Reference Include="System"/>
-        <Reference Include="System.Core"/>
-        <Reference Include="System.Data"/>
-        <Reference Include="System.Xml"/>
+        <Reference Include="System" />
+        <Reference Include="System.Core" />
+        <Reference Include="System.Data" />
+        <Reference Include="System.Xml" />
         <Reference Include="UnityEngine">
             <HintPath>..\..\Unity\Unity Hub\versions\2020.3.36f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
         </Reference>
@@ -92,40 +92,41 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="EnumerableExtension.cs"/>
-        <Compile Include="GameObjectExtension.cs"/>
-        <Compile Include="GlobalUsings.cs"/>
-        <Compile Include="MonoBehaviourExtension.cs"/>
-        <Compile Include="ObjectExtension.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
-        <Compile Include="RectTransformExtension.cs"/>
-        <Compile Include="RendererExtension.cs"/>
-        <Compile Include="SimpleVector2.cs"/>
-        <Compile Include="SimpleVector3.cs"/>
-        <Compile Include="StringExtension.cs"/>
-        <Compile Include="TransformExtension.cs"/>
-        <Compile Include="Utilities.cs"/>
-        <Compile Include="Valheim\BaseMod.cs"/>
-        <Compile Include="Valheim\BiomeExtension.cs"/>
-        <Compile Include="Valheim\InventoryExtension.cs"/>
-        <Compile Include="Valheim\ItemDropExtension.cs"/>
-        <Compile Include="Valheim\MinimapExtension.cs"/>
-        <Compile Include="Valheim\ObjectDBExtension.cs"/>
-        <Compile Include="Valheim\RecipeExtension.cs"/>
-        <Compile Include="Valheim\StringExtension.cs"/>
-        <Compile Include="Valheim\WithPatch\RegisterObjectsInstances.cs"/>
-        <Compile Include="Valheim\WithPatch\UpdateConfigOnGameStart.cs"/>
-        <Compile Include="Valheim\ZNetSceneExtension.cs"/>
-        <Compile Include="Valheim\ZoneSystemExtension.cs"/>
-        <Compile Include="VectorExtension.cs"/>
-        <Compile Include="Weather.cs"/>
+        <Compile Include="EnumerableExtension.cs" />
+        <Compile Include="GameObjectExtension.cs" />
+        <Compile Include="GlobalUsings.cs" />
+        <Compile Include="MonoBehaviourExtension.cs" />
+        <Compile Include="ObjectExtension.cs" />
+        <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="RectTransformExtension.cs" />
+        <Compile Include="RendererExtension.cs" />
+        <Compile Include="SimpleVector2.cs" />
+        <Compile Include="SimpleVector3.cs" />
+        <Compile Include="StringExtension.cs" />
+        <Compile Include="TimeUtils.cs" />
+        <Compile Include="TransformExtension.cs" />
+        <Compile Include="Utilities.cs" />
+        <Compile Include="Valheim\BaseMod.cs" />
+        <Compile Include="Valheim\BiomeExtension.cs" />
+        <Compile Include="Valheim\InventoryExtension.cs" />
+        <Compile Include="Valheim\ItemDropExtension.cs" />
+        <Compile Include="Valheim\MinimapExtension.cs" />
+        <Compile Include="Valheim\ObjectDBExtension.cs" />
+        <Compile Include="Valheim\RecipeExtension.cs" />
+        <Compile Include="Valheim\StringExtension.cs" />
+        <Compile Include="Valheim\WithPatch\RegisterObjectsInstances.cs" />
+        <Compile Include="Valheim\WithPatch\UpdateConfigOnGameStart.cs" />
+        <Compile Include="Valheim\ZNetSceneExtension.cs" />
+        <Compile Include="Valheim\ZoneSystemExtension.cs" />
+        <Compile Include="VectorExtension.cs" />
+        <Compile Include="Weather.cs" />
     </ItemGroup>
     <ItemGroup>
-        <Content Include="README.md"/>
+        <Content Include="README.md" />
     </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
+    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="CopyDLL" AfterTargets="Build">
-        <Copy SourceFiles="$(TargetDir)$(ProjectName).dll" DestinationFolder="D:\Slava\Coding\Utils"/>
+        <Copy SourceFiles="$(TargetDir)$(ProjectName).dll" DestinationFolder="D:\Slava\Coding\Utils" />
     </Target>
 
 </Project>
