--- a/JFUtils.csproj
+++ b/JFUtils.csproj
@@ -13,7 +13,6 @@
         <FileAlignment>512</FileAlignment>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>preview</LangVersion>
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -40,6 +39,9 @@
         </Reference>
         <Reference Include="assembly_guiutils">
             <HintPath>..\Utils\assembly_guiutils_publicized.dll</HintPath>
+        </Reference>
+        <Reference Include="assembly_steamworks">
+          <HintPath>..\Utils\assembly_steamworks_publicized.dll</HintPath>
         </Reference>
         <Reference Include="assembly_utils">
             <HintPath>..\Utils\assembly_utils_publicized.dll</HintPath>
@@ -122,6 +124,7 @@
         <Compile Include="SimpleVector3.cs" />
         <Compile Include="SkillsExtension.cs" />
         <Compile Include="StringExtension.cs" />
+        <Compile Include="TaskExtensions.cs" />
         <Compile Include="TimeUtils.cs" />
         <Compile Include="TransformExtension.cs" />
         <Compile Include="VectorExtension.cs" />
