--- a/JFUtils.csproj
+++ b/JFUtils.csproj
@@ -101,6 +101,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="BiomeExtension.cs" />
+        <Compile Include="CharacterExtension.cs" />
         <Compile Include="ColorExtension.cs" />
         <Compile Include="ConfigSync.cs" />
         <Compile Include="ConfigurationManagerAttributes.cs" />
